# ucb-to-testflight

./: .gitignore  .gitmodules  AGENTS.md  README.md  example.env  pyproject.toml  upload_to_testflight.sh
Editor/UploadToTestFlight/: AppStoreConnectKeyExample.json  env_accessor.py  pretty_print.py  upload_to_testflight.py
Editor/UploadToTestFlight/testflight_uploader/: app_store_connect_key_creator.py  build_file_finder.py  command_utility.py  testflight_uploader.py  upload_configuration.py
src/: fastlane_pilot_output_log_error_checker.py  upload_attempt.py  upload_to_test_flight.py
src/ucb_to_testflight/: upload_parameters.py  upload_to_test_flight.py  upload_to_testflight.py
