[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucb-to-testflight"
version = "0.1.0"
description = "Upload iOS .ipa builds to TestFlight."
requires-python = ">=3.9"
dependencies = [
    "pyliot @ git+https://github.com/JohnnyHowe/pyliot.git",
    "python-command-line-helpers @ git+https://github.com/JohnnyHowe/python-command-line-helpers.git",
    "dotenv"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ucb_to_testflight*"]
